Allow lid to send a generic COVER_CHANGED broadcast
This intent will be used to launch a common app for devices
with a view window flip cover(LG, Asus..) or dotcase(HTC).

Updated for Lineage SDK and squashed with the following change:

  Author: Ethan Chen <intervigil@gmail.com>
  Date:   Sat Jan 28 21:39:21 2017 -0800

    Correctly name LID_STATE_CHANGED broadcast

    Change-Id: I472becdcf310fab8536fb24e6cacf646199f464d

Change-Id: I8ce163d0d3f71e40680f42348847e548b41a0045

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -844,6 +844,9 @@
     <protected-broadcast android:name="com.android.server.app.AppLockManagerService.APP_LOCK_TIMEOUT" />
     <protected-broadcast android:name="android.app.action.UNLOCK_APP" />
 
+    <!-- Used to launch a common app (FlipFlap) for devices with flip cover. -->
+    <protected-broadcast android:name="android.intent.action.LID_STATE_CHANGED" />
+
     <!-- ====================================================================== -->
     <!--                          RUNTIME PERMISSIONS                           -->
     <!-- ====================================================================== -->
