base: Introduce automated Sleep Mode [1/2]
[cjh1249131356]:
- Adapt to S
- Dropped AOD toggle in favor of scheduled AOD feature
- Dropped Aggressive battery toggle

[Stallix]
* Adapt to A13 QPR2 after b8d6c0a.

Change-Id: I85fc36e6db7ceeca1a1031f71f3882a776864814
Signed-off-by: Anushek Prasal <anushekprasal@gmail.com>
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -839,6 +839,9 @@
     <protected-broadcast android:name="io.chaldeaprjkt.gamespace.action.GAME_START" />
     <protected-broadcast android:name="io.chaldeaprjkt.gamespace.action.GAME_STOP" />
 
+    <!-- Sleep Mode -->
+    <protected-broadcast android:name="android.intent.action.SLEEP_MODE_TURN_OFF" />
+
     <!-- ====================================================================== -->
     <!--                          RUNTIME PERMISSIONS                           -->
     <!-- ====================================================================== -->
